--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Aplicatico de clima</title>
+    <title>Aplicativo de clima</title>
   </head>
 
   <body>
